@@ -2,6 +2,52 @@ import pygame
 import math
 import os
 
+class GameInfoPanel2(object):
+	def __init__(self, currentLevel):
+		self.fullSurf = pygame.Surface((128,128))
+		self.rect = (128,0,128,128)
+		self.borderTemplate = pygame.Surface((128,128), pygame.SRCALPHA, 32).convert_alpha()
+		pygame.draw.rect(self.borderTemplate, (0,0,0), (0,0,128,128), 1) 
+		self.minimapInit(currentLevel)
+		self.minimapOverlayInit(currentLevel)
+
+
+	def minimapInit(self, currentLevel):
+		fullMap = currentLevel.mapSurf
+		width,height = currentLevel.width,currentLevel.height
+		#This gets the ratio of size between the minimap (128x128) and the actual map layout.
+		#We will use this ratio to scale everything in the minimap based off of the actual mapsurf we draw on the board
+		#as well as the "current view" window. Note the 128.0 because integer division
+		self.sizeRatio = max(width,height)/128.0 
+		self.minimap = pygame.transform.smoothscale(fullMap, (int(width/self.sizeRatio)-1,int(height/self.sizeRatio)-1))
+		self.minimapRect = self.minimap.get_rect()
+		self.widthPad = (128-self.minimapRect[2])/2.0
+		self.heightPad = (128-self.minimapRect[3])/2.0
+		self.minimapRect.topleft = (self.widthPad,self.heightPad)
+		self.scaleTileSize = 32.0/self.sizeRatio
+
+	def minimapOverlayInit(self, currentLevel):
+		overlay = pygame.Surface((640,352), pygame.SRCALPHA, 32).convert_alpha()
+		temp = pygame.Surface((640,352))
+		temp.fill((20,20,20))
+		blit_alpha(overlay, temp, (0,0,640,352), 100)
+		self.overlay = pygame.transform.smoothscale(overlay, (int(640/self.sizeRatio),int(352/self.sizeRatio)))
+		pygame.draw.rect(self.overlay, (0,0,0), (0,0,int(640/self.sizeRatio),int(352/self.sizeRatio)), 1)
+		self.overlayRect = self.overlay.get_rect()
+		self.overlayTopLeft = (self.widthPad,self.heightPad)
+		self.overlayRect.topleft = self.overlayTopLeft
+
+
+	def update(self, currentLevel):
+		topLeft = currentLevel.boardViewTopLeft
+		self.overlayRect = (int(topLeft[0]*self.scaleTileSize+self.overlayTopLeft[0]),
+							int(topLeft[1]*self.scaleTileSize+self.overlayTopLeft[1]),
+							self.overlayRect[2],self.overlayRect[3])
+		self.fullSurf.blit(self.minimap,self.minimapRect)
+		self.fullSurf.blit(self.overlay, self.overlayRect)
+
+
+
 class GameInfoPanel3(object):
 	def __init__(self):
 		self.fullSurf = pygame.Surface((128,128))
@@ -64,3 +110,14 @@ class GameInfoPanel5(object):
 		self.fullSurf.blit(self.titleSurf, self.titleSurfRect)
 		self.fullSurf.blit(self.imageSurf, self.imageSurfRect)
 		self.fullSurf.blit(self.borderTemplate,(0,0))
+
+
+def blit_alpha(target, source, location, opacity):
+    x = location[0]
+    y = location[1]
+    temp = pygame.Surface((source.get_width(), source.get_height())).convert()
+    temp.blit(target, (-x, -y))
+    temp.blit(source, (0, 0))
+    temp.set_alpha(opacity)        
+    target.blit(temp, location)
+
